# Facial-geometric-features-extraction

./: CMakeLists.txt  README.md  main.cpp  makefile_old
include/: adaptive_thresholding.h  constants.h  extract_eye_brow_contour.h  eye_brow_features_detection.h  eye_mouth_feature_detect.h  eye_pseudo_hue_data.h  eye_pts_detection.h  face_alignment.h  global.h  gray_eyebrow_image_threshold.h  lip_features.h  locate_eye_brow.h  locate_pts.h  my_lib.h  pseudo_hue_data.h  segmented_data.h  utils.h
source/: TAGS  adaptive_thresholding.cpp  calculate_neutral_eyebrow_movement_pts.cpp  calculate_neutral_lip_movement_pts.cpp  detect_smile.cpp  extract_eye_brow_contour.cpp  eye_brow_features_detection.cpp  eye_mouth_feature_detect.cpp  eye_pseudo_hue_data.cpp  eye_pts_detection.cpp  eyebrow_movement_fn.cpp  face_alignment.cpp  gray_eyebrow_image_threshold.cpp  hybrid_edge.cpp  lip_contour_for_snake.cpp  lip_features.cpp  lip_movement_fn.cpp  lip_pt_detection.cpp  locate_eye_brow.cpp  locate_pts.cpp  pseudo_hue_data.cpp  read_data_write_back.cpp  read_eyebrow_pts_from_text_file.cpp  rotate_at_theta_angle.cpp  save_eye_brow_images.cpp  segmented_data.cpp  snake_algo.cpp  sudo_hue_file.cpp  sudo_hue_file_for_snake.cpp  sudo_hue_for_eye_brow.cpp  utils.cpp  write_movement_data_to_file.cpp  write_text_file.cpp
source/extract_features_for_CK_db/: detect_eye_centers.cpp
